--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.38",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.3"
   },
   "dependencies": {
     "@parcel/transformer-js": "^2.12.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8"
   },
   "browserslist": [
     "last 2 versions"
